# lgtbot

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
.github/workflows/: cmake.yml  test.yml
bot_core/: CMakeLists.txt  bot_core.cc  bot_core.h  bot_ctx.cc  bot_ctx.h  db_manager.cc  db_manager.h  game_config_client.cc  game_config_client.h  game_handle.h  match.cc  match.h  match_child_client.cc  match_child_client.h  match_manager.cc  message_handlers.cc  msg_sender.h  subprocess.cc  subprocess.h  test_bot.cc
bot_core/test_game/: achievements.h  mygame.cc  options.h  rule.md  unittest.cc
game_framework/: game_main.cc  game_main.h  mock_match.h  player_ready_masker.cc  resource_loader.cc  stage_fsm.h  stage_utility.cc  stage_utility.h  unittest_base.h
game_util/: CMakeLists.txt  mahjong_util.h  numcomb.h  othello.h  poker.h  poker_squares.h  quixo.h  sync_mahjong.h  test_alchemist.cc  test_mahjong_17_steps.cc
games/: CMakeLists.txt
games/alchemist/: achievements.h  mygame.cc  unittest.cc
games/alter_rps/: mygame.cc  options.h
games/ataxx/: board.h  mygame.cc  options.h  rule.md  unittest.cc
games/avalon/: mygame.cc  unittest.cc
games/beast_trap_chess/: board.h  mygame.cc  options.h  rule.md  unittest.cc
games/beauty_vote/: mygame.cc
games/bidding_poker/: mygame.cc  unittest.cc
games/blocked_road/: board.h  mygame.cc
games/bread_crisis/: mygame.cc
games/chinese_chess/: mygame.cc
games/crowd/: mygame.cc  options.h  problems.h  problems_t.h  unittest.cc
games/crowd/resource/: crowd_2024.3.20_58-107.txt  exportAllQuestions.cpp  in.txt  removed questions.cpp  test_37.txt  test_questions_local.cpp  乌合之众开发文档.cpp  乌合之众题库_2025.7.15_78-132-24.txt
games/digital_investment/: mygame.cc  options.h  rule.md  unittest.cc
games/dvalue_tender/: mygame.cc  options.h
games/dvalue_tender/nash-equilibrium-solver/core/: dfs_diff.cpp  dfs_diff.h  g++.txt  game.h  game_diff.h  strategy.h  strategy_dfs.h
games/dvalue_tender/nash-equilibrium-solver/util/: util.h
games/dvalue_tender/nash-equilibrium-solver/util/lemke-howson-killer/: algorithm.cpp  algorithm.h  bimatrix.cpp  bimatrix.h  equilibria.cpp
games/ecard/: mygame.cc
games/escape_building/: achievements.h  hints.h  mygame.cc  options.h  rule.md  unittest.cc
games/expedition/: mygame.cc
games/garden_of_eden/: mygame.cc
games/garnet_thief/: mygame.cc  options.h  rule.md  unittest.cc
games/gold_coins/: mygame.cc  options.h  rule.md
games/hex/: board.h  mygame.cc  options.h  rule.md
games/holdem_poker/: mygame.cc  unittest.cc
games/hp_killer/: mygame.cc  occupation.h  options.h  rule.md  unittest.cc
games/jewish_chess/: mygame.cc
games/keep_drawing/: mygame.cc  options.h  rule.md  unittest.cc
games/laser_chess/: mygame.cc
games/lie/: mygame.cc
games/long_night/: achievements.h  board.h  boss.h  constants.h  grid.h  map.h  mygame.cc  options.h  player.h  rule.md  unittest.cc
games/lucky_poker/: mygame.cc  unittest.cc
games/mahjong_17_steps/: mygame.cc  unittest.cc
games/move_chess/: mygame.cc
games/mzad/: mygame.cc  options.h  rule.md  unittest.cc
games/naval_battle/: board.h  boss.h  mygame.cc  options.h  rule.md
games/nerduel/: mygame.cc  rule.md
games/number_investment/: mygame.cc  options.h  rule.md  unittest.cc
games/numcomb/: mygame.cc  options.h  unittest.cc
games/opencomb/: achievements.h  mygame.cc  opencomb.h  options.h  rule.md  unittest.cc
games/poker_squares/: mygame.cc
games/quixo/: mygame.cc
games/rainbow_treasure_hunter/: board.h  mygame.cc  options.h  rule.md  unittest.cc
games/renju/: mygame.cc
games/rogue_pasture/: mygame.cc
games/six_nimmt/: mygame.cc  options.h  rule.md  table.h
games/sync_mahjong/: unittest.cc
games/talent_comb/: achievements.h  mygame.cc  options.h  player.h  rule.md  talent.h  talent_base.h  talent_classes.h  talent_comb.h  talent_impl.h  talent_order.h  unittest.cc
games/throw_handkerchief/: rule.md
games/unity_chess/: mygame.cc
games/wordle/: mygame.cc
games/world_without_thieves/: mygame.cc
match_process/: CMakeLists.txt  child_config_session.cc  child_config_session.h  child_session.cc  child_session.h  config_runner_main.cc  game_runner_main.cc  ipc_frame.cc  ipc_frame.h  ipc_match_env.cc  ipc_match_env.h  json_frame.cc  json_frame.h  match.proto  match_child_client.cc  match_child_client.h  match_ipc.proto  subprocess.cc  subprocess.h
tools/: CMakeLists.txt  score_updater.cc  simulator.cc
utility/: CMakeLists.txt  msg_checker.h  process_signals.h  random.h  serial_task_queue.h  util_func.h  utils.h
